fixed contact alignment, increased name size

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
 	background: #fff;
     color: #616161;
-	font: 14px 'Open Sans', Helvetica, Arial, sans-serif;
+	font: 16px 'Open Sans', Helvetica, Arial, sans-serif;
 	line-height: 1.4;
 	margin: 0 0;
 	margin-bottom: 100px;
@@ -40,12 +40,12 @@ blockquote {
 /* Resume heading */
 .heading header { 
     display: inline-block;
-    width: 49.5%;
 }
 
 .heading header h1 {
-	font-size: 220%;
-	margin: 0.5em 0;
+	font-size: 250%;
+    margin: 0;
+    float: left;
 	font-weight: 600;
 }
 
@@ -56,9 +56,9 @@ blockquote {
 }
 
 .contact-wrapper {
-    text-align: justify;
-    display: inline-block;
-    width: 49.5%;
+    font-size: 12px;
+    text-align: right;
+    float: right;
 }
 
 .profile {
